--- a/index.html
+++ b/index.html
@@ -58,30 +58,31 @@
       position: fixed;
       top: 0;
       left: -200px;
-      background-color: #000;
+      background-color: #111;
+      overflow-x: hidden;
       transition: 0.3s;
       z-index: 2000;
-      padding-top: 0;
-    }
-
-    /* Tiêu đề trong sidebar */
-    .dropdown-content .title {
-      font-size: 20px;
-      font-weight: bold;
-      padding: 15px 20px;
-      border-bottom: 1px solid #333;
-      text-align: left;
+      padding-top: 20px;
     }
 
     .dropdown-content a {
       display: block;
-      padding: 15px 20px;
+      padding: 12px 18px;
       color: #fff;
       text-decoration: none;
     }
 
-    .dropdown-content a:hover {
+    .dropdown-content a:hover,
+    .dropdown-content a.active {
       background-color: #333;
+    }
+
+    .dropdown-content .title {
+      font-size: 18px;
+      font-weight: bold;
+      padding: 15px 18px;
+      border-bottom: 1px solid #333;
+      margin-bottom: 10px;
     }
 
     .dropdown-content.show {
@@ -163,10 +164,10 @@
 
   <!-- Sidebar menu -->
   <div class="dropdown-content" id="dropdownMenu">
-    <div class="title">SaKi-Hub</div>
-    <a href="#" data-page="home">Home</a>
-    <a href="#" data-page="script">Script</a>
-    <a href="#" data-page="connect">Connect</a>
+    <div class="title">Saki-Hub</div>
+    <a href="/home" data-page="home">Home</a>
+    <a href="/script" data-page="script">Script</a>
+    <a href="/connect" data-page="connect">Connect</a>
   </div>
 
   <!-- Nội dung chính -->
@@ -187,7 +188,8 @@
       setTimeout(() => {
         overlay.style.display = 'none';
         mainContent.classList.add('show');
-      }, 1000);
+        handleRoute(location.pathname);
+      }, 800);
     });
 
     // Toggle sidebar
@@ -202,8 +204,8 @@
       }
     });
 
-    // Hàm hiển thị nội dung
-    function showPage(page){
+    // Hàm hiển thị nội dung theo trang
+    function showPage(page, pushState = true){
       overlay.style.display = 'flex';
       mainContent.classList.remove('show');
 
@@ -222,19 +224,35 @@
           mainContent.innerHTML = `
             <h1>Connect</h1>
             <p>Đây là phần Connect. Nội dung nền đen, chữ trắng.</p>
-            <button id="discordBtn">Join my server</button>
+            <button id="discordBtn">Join Discord</button>
           `;
           const discordBtn = document.getElementById("discordBtn");
           discordBtn.addEventListener("click", () => {
             window.open("https://discord.gg/cHrynR4E", "_blank");
           });
         }
+
+        // Đổi URL bằng history API
+        if(pushState){
+          history.pushState({page}, "", "/" + page);
+        }
+
+        highlightMenu(page);
+
         overlay.style.display = 'none';
         mainContent.classList.add('show');
-      }, 800);
+      }, 500);
     }
 
-    // Menu click
+    // Highlight menu
+    function highlightMenu(page){
+      const links = dropdownMenu.querySelectorAll('a');
+      links.forEach(link => {
+        link.classList.toggle('active', link.getAttribute('data-page') === page);
+      });
+    }
+
+    // Điều hướng khi click menu
     const links = dropdownMenu.querySelectorAll('a');
     links.forEach(link => {
       link.addEventListener('click', (e) => {
@@ -245,10 +263,27 @@
       });
     });
 
-    // Click logo về Home
+    // Logo click về home
     logo.addEventListener('click', () => {
       showPage('home');
     });
+
+    // Xử lý khi bấm Back/Forward
+    window.addEventListener('popstate', (event) => {
+      const page = event.state?.page || 'home';
+      showPage(page, false);
+    });
+
+    // Xử lý route ban đầu
+    function handleRoute(path){
+      if(path === '/script'){
+        showPage('script', false);
+      } else if(path === '/connect'){
+        showPage('connect', false);
+      } else {
+        showPage('home', false);
+      }
+    }
   </script>
 </body>
 </html>
